--- a/WeatherMap/src/App.css
+++ b/WeatherMap/src/App.css
@@ -29,15 +29,11 @@ a {
   height: 100vh;
 }
 
-.combobox-input {
-  width: 100%;
-  padding: 0.5rem;
-}
-.gm-style .gm-style-iw-c {
-   padding-right: 10px !important;
+.gm-style .gm-style-iw-c  {
+    padding-right: 10px !important;
     padding-bottom: 0px !important;
     max-width: 500px !important;
-    max-height: 326px !important;
+    max-height: 100vh !important;
     min-width: 0px !important;
     position: absolute;
     box-sizing: border-box;
@@ -47,7 +43,7 @@ a {
     background-color: white;
     border-radius: 8px;
     box-shadow: 0 2px 7px 1px rgba(0,0,0,0.3);
-    border: 4px solid #f56a2f !important;
+    border: 1px solid  !important;
 }
 .constructionPanel {
     border: 4px solid #f56a2f !important;
