--- a/WeatherMap/src/App.css
+++ b/WeatherMap/src/App.css
@@ -43,7 +43,7 @@ a {
     background-color: white;
     border-radius: 8px;
     box-shadow: 0 2px 7px 1px rgba(0,0,0,0.3);
-    border: 1px solid  !important;
+    border: 2px solid #f56a2f !important;
 }
 .constructionPanel {
     border: 4px solid #f56a2f !important;
