--- a/WeatherMap/src/App.css
+++ b/WeatherMap/src/App.css
@@ -25,8 +25,10 @@ a {
 }
 
 .map-container {
-  width: 100%;
-  height: 100vh;
+  width: 90%;
+  height: 90vh;
+  margin-left: 100px ;
+  marginTop: 0;
 }
 
 .gm-style .gm-style-iw-c  {
